--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
                         </div>
                         <div class="find-spec-form-wrap">
                             <form class="find-spec-form" action="">
-                                <input class="form-field-white" type="text" id="full-name" name="full-name"
+                                <input class="find-spec-field form-field-white" type="text" id="full-name" name="full-name"
                                     value="Как вас зовут?">
-                                <input class="form-field-white" type="text" id="telephone" name="telephone"
+                                <input class="find-spec-field form-field-white" type="text" id="telephone" name="telephone"
                                     value="Номер телефона">
-                                <input class="white-btn" type="submit" value="Найти специалиста">
+                                <input class="find-spec-btn white-btn" type="submit" value="Найти специалиста">
                             </form>
                             <div class="bottom-desc-small">
                                 <span>Отправляя форму вы соглашаетесь на обработку персональных данных. </span>
@@ -297,7 +297,7 @@
             </section>
             <section class="find-vacancies">
                 <div class="container-small">
-                    <h1 class="h1-title">Найдите специалиста за две недели</h1>
+                    <h1 class="h1-title">Найдите работу, о которой мечтали</h1>
 
                     <div class="find-vacancies-wrap forms-bg-violet">
                         <div class="find-vacancies-right-block">
@@ -306,15 +306,14 @@
                             </span>
                             <div class="find-vacancies-form-wrapper">
                                 <form class="find-vacancy-form" action="">
-                                    <input class="form-field-white" type="text" id="full-name" name="full-name"
+                                    <input class="find-vacancy-field form-field-white" type="text" id="full-name" name="full-name"
                                         value="Как вас зовут?">
-                                    <input class="form-field-white" type="text" id="telephone" name="telephone"
+                                    <input class="find-vacancy-field form-field-white" type="text" id="telephone" name="telephone"
                                         value="Номер телефона">
-                                    <input class="white-btn" type="submit" value="Найти специалиста">
+                                    <input class="find-vacancy-btn white-btn" type="submit" value="Найти специалиста">
                                 </form>
                             </div>
                         </div>
-
                         <div class="find-vacancies-right-image">
                         </div>
                     </div>
