--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="reviews-block">
+                <div class="reviews-block last-reviews-block">
                     <div class="reviews-logo-title">
                         <img src="https://i.pravatar.cc/50" alt="" class="customer-foto">
                         <div class="customer-desc-block">
@@ -600,7 +600,7 @@
                 </div>
                 <div class="footer-socials-btn">
                     <a href="#" class="footer-btn white-btn">Оставить заявку</a>
-                    <div class="socials-col">
+                    <div class="socials-col-footer">
                         <a href="" class="footer-social-item icon-telegram"></a>
                         <a href="" class="footer-social-item  icon-vk"></a>
                         <a href="" class="footer-social-item icon-twitter"></a>
