--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                         </div>
                         <div class="find-spec-form-wrap">
                             <form class="find-spec-form" action="">
-                                <input class="find-spec-field form-field-white" type="text" id="full-name" name="full-name"
-                                    value="Как вас зовут?">
-                                <input class="find-spec-field form-field-white" type="text" id="telephone" name="telephone"
-                                    value="Номер телефона">
+                                <input class="find-spec-field form-field-white" type="text" id="full-name"
+                                    name="full-name" value="Как вас зовут?">
+                                <input class="find-spec-field form-field-white" type="text" id="telephone"
+                                    name="telephone" value="Номер телефона">
                                 <input class="find-spec-btn white-btn" type="submit" value="Найти специалиста">
                             </form>
                             <div class="bottom-desc-small">
@@ -306,10 +306,10 @@
                             </span>
                             <div class="find-vacancies-form-wrapper">
                                 <form class="find-vacancy-form" action="">
-                                    <input class="find-vacancy-field form-field-white" type="text" id="full-name" name="full-name"
-                                        value="Как вас зовут?">
-                                    <input class="find-vacancy-field form-field-white" type="text" id="telephone" name="telephone"
-                                        value="Номер телефона">
+                                    <input class="find-vacancy-field form-field-white" type="text" id="full-name"
+                                        name="full-name" value="Как вас зовут?">
+                                    <input class="find-vacancy-field form-field-white" type="text" id="telephone"
+                                        name="telephone" value="Номер телефона">
                                     <input class="find-vacancy-btn white-btn" type="submit" value="Найти специалиста">
                                 </form>
                             </div>
@@ -559,76 +559,80 @@
     </main>
     <footer class="footer">
         <div class="footer-wrap">
-            <div class="footer-top-wrap">
-                <div class="footer-menu-wrap">
-                    <div class="footer-about-company">
-                        <span class="footer-title">О компании</span>
-                        <ul class="footer-menu-list">
-                            <li>Наша команда</li>
-                            <li>Отзывы</li>
-                            <li>Цены</li>
-                            <li>Наши партнеры</li>
-                            <li>Работа у нас</li>
-                            <li>Благотворительная деятальность</li>
-                        </ul>
+
+                <div class="footer-top-wrap">
+                    <div class="footer-menu-wrap">
+                        <div class="footer-about-company">
+                            <span class="footer-title">О компании</span>
+                            <ul class="footer-menu-list">
+                                <li>Наша команда</li>
+                                <li>Отзывы</li>
+                                <li>Цены</li>
+                                <li>Наши партнеры</li>
+                                <li>Работа у нас</li>
+                                <li>Благотворительная деятальность</li>
+                            </ul>
+
+                        </div>
+                        <div class="footer-employers">
+                            <span class="footer-title">Работодателям</span>
+                            <ul class="footer-menu-list">
+                                <li>Подбор персонала</li>
+                                <li>Аутсорсинг персонала</li>
+                                <li>Аутстаффинг персонала</li>
+                                <li>Аутсорсинг процесса рекрутмента</li>
+                                <li>Аутплейсмент</li>
+                                <li>Тренинги для персонала</li>
+                                <li>Исследования</li>
+                            </ul>
+
+                        </div>
+                        <div class="footer-applicants">
+                            <span class="footer-title">Соискателям</span>
+                            <ul class="footer-menu-list">
+                                <li>Поиск работы</li>
+                                <li>Карьерное консультирование</li>
+                                <li>Тесты для кандидатов</li>
+                            </ul>
+
+                        </div>
+
 
                     </div>
-                    <div class="footer-employers">
-                        <span class="footer-title">Работодателям</span>
-                        <ul class="footer-menu-list">
-                            <li>Подбор персонала</li>
-                            <li>Аутсорсинг персонала</li>
-                            <li>Аутстаффинг персонала</li>
-                            <li>Аутсорсинг процесса рекрутмента</li>
-                            <li>Аутплейсмент</li>
-                            <li>Тренинги для персонала</li>
-                            <li>Исследования</li>
-                        </ul>
-
+                    <div class="footer-socials-btn">
+                        <a href="#" class="footer-btn white-btn">Оставить заявку</a>
+                        <div class="socials-col-footer">
+                            <a href="" class="footer-social-item icon-telegram"></a>
+                            <a href="" class="footer-social-item  icon-vk"></a>
+                            <a href="" class="footer-social-item icon-twitter"></a>
+                            <a href="" class="footer-social-item icon-youtube"></a>
+                            <a href="" class="footer-social-item icon-linkedin"></a>
+                        </div>
                     </div>
-                    <div class="footer-applicants">
-                        <span class="footer-title">Соискателям</span>
-                        <ul class="footer-menu-list">
-                            <li>Поиск работы</li>
-                            <li>Карьерное консультирование</li>
-                            <li>Тесты для кандидатов</li>
-                        </ul>
-
-                    </div>
-
-
                 </div>
-                <div class="footer-socials-btn">
-                    <a href="#" class="footer-btn white-btn">Оставить заявку</a>
-                    <div class="socials-col-footer">
-                        <a href="" class="footer-social-item icon-telegram"></a>
-                        <a href="" class="footer-social-item  icon-vk"></a>
-                        <a href="" class="footer-social-item icon-twitter"></a>
-                        <a href="" class="footer-social-item icon-youtube"></a>
-                        <a href="" class="footer-social-item icon-linkedin"></a>
+                <div class="footer-bottom-wrap">
+                    <div class="footer-btm-left">
+                        <span class="terms-of-use footer-polices-texts">
+                            Пользовательское соглашение
+                        </span>
+                        <span class="labor-protection footer-polices-texts">
+                            Политика в области охраны труда
+                        </span>
+                        <span class="personal-data footer-polices-texts">
+                            Политика в отношении обработки персональных данных
+                        </span>
                     </div>
+                    <div class="footer-btm-right">
+                        <span class="personal-data footer-polices-texts">
+                            © Antal Russia 2022. All Rights Reserved.
+                        </span>
+                    </div>
+
                 </div>
             </div>
-            <div class="footer-bottom-wrap">
-                <div class="footer-btm-left">
-                    <span class="terms-of-use footer-polices-texts">
-                        Пользовательское соглашение
-                    </span>
-                    <span class="labor-protection footer-polices-texts">
-                        Политика в области охраны труда
-                    </span>
-                    <span class="personal-data footer-polices-texts">
-                        Политика в отношении обработки персональных данных
-                    </span>
-                </div>
-                <div class="footer-btm-right">
-                    <span class="personal-data footer-polices-texts">
-                        © Antal Russia 2022. All Rights Reserved.
-                    </span>
-                </div>
-
-            </div>
+        
         </div>
+
     </footer>
     </div>
     </div>
