--- a/index.html
+++ b/index.html
@@ -298,7 +298,6 @@
             <section class="find-vacancies">
                 <div class="container-small">
                     <h1 class="h1-title">Найдите работу, о которой мечтали</h1>
-
                     <div class="find-vacancies-wrap forms-bg-violet">
                         <div class="find-vacancies-right-block">
                             <span class="find-vacancies-desc">
@@ -315,6 +314,7 @@
                             </div>
                         </div>
                         <div class="find-vacancies-right-image">
+                            <img src="./images/find-vacancy.jpg" alt="">
                         </div>
                     </div>
                 </div>
