addiptive fixes-sizes

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <section class="slider">
                 <div class="container-small">
                     <div class="slider-content">
-                        <h1 class="slider-heading">Ведущая рекрутинговая компания России и СНГ</h1>
+                        <span class="h1-title-white slider-heading">Ведущая рекрутинговая компания России и СНГ</span>
                         <div class="slider-text">
                             <p>
                                 Специализируемся на подборе персонала среднего и высшего управленческих звеньев
