--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                             <p class="vacancy-title">Медицинский представитель</p>
                             <div class="vacancy-block-btm-wrap">
                                 <div class="city-salary">
-                                    <span class="vacancy-location icon-location"> Москва</span>
-                                    <span class="vacancy-salary icon-wallet"> 200 000</span>
+                                    <span class="icon-location"><span class="vacancy-location"> Москва</span></span>
+                                    <span class="icon-wallet"> <span class="vacancy-salary"> 200 000</span></span>
                                 </div>
                                 <div class="block-arrow icon-arrow-right"></div>
                             </div>
@@ -338,8 +338,8 @@
                             <p class="vacancy-title">Медицинский представитель</p>
                             <div class="vacancy-block-btm-wrap">
                                 <div class="city-salary">
-                                    <span class="vacancy-location icon-location"> Москва</span>
-                                    <span class="vacancy-salary icon-wallet"> 200 000</span>
+                                    <span class="icon-location"><span class="vacancy-location"> Москва</span></span>
+                                    <span class="icon-wallet"> <span class="vacancy-salary"> 200 000</span></span>
                                 </div>
                                 <div class="block-arrow icon-arrow-right"></div>
                             </div>
@@ -349,8 +349,8 @@
                             <p class="vacancy-title">Медицинский представитель</p>
                             <div class="vacancy-block-btm-wrap">
                                 <div class="city-salary">
-                                    <span class="vacancy-location icon-location"> Москва</span>
-                                    <span class="vacancy-salary icon-wallet"> 200 000</span>
+                                    <span class="icon-location"><span class="vacancy-location"> Москва</span></span>
+                                    <span class="icon-wallet"> <span class="vacancy-salary"> 200 000</span></span>
                                 </div>
                                 <div class="block-arrow icon-arrow-right"></div>
                             </div>
@@ -360,8 +360,8 @@
                             <p class="vacancy-title">Медицинский представитель</p>
                             <div class="vacancy-block-btm-wrap">
                                 <div class="city-salary">
-                                    <span class="vacancy-location icon-location"> Москва</span>
-                                    <span class="vacancy-salary icon-wallet"> 200 000</span>
+                                    <span class="icon-location"><span class="vacancy-location"> Москва</span></span>
+                                    <span class="icon-wallet"> <span class="vacancy-salary"> 200 000</span></span>
                                 </div>
                                 <div class="block-arrow icon-arrow-right"></div>
                             </div>
