--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <div class="container-small">
                     <div class="achivements-wrap">
                         <div class="achivements-title-block">
-                            <p class="achivements-title">
+                            <p class="achivements-title h1-title-white">
                                 Достижения
                             </p>
                         </div>
