--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </section>
             <section class="activities">
                 <div class="container-small">
-                    <h1 class="h1-title">Направления деятельности</h1>
+                    <span class="h1-title">Направления деятельности</span>
                     <div class="activities-wrapper">
                         <div class="activities-left-col activities-col">
                             <div class="h3-title">
@@ -186,41 +186,41 @@
             </section>
             <section class="find-spec-steps">
                 <div class="container-small">
-                    <h1 class="h1-title">Процесс поиска специалиста</h1>
+                    <span class="h1-title">Процесс поиска специалиста</span>
 
                     <div class="find-spec-wrap">
                         <div class="find-spec-step">
                             <div class="number-bg">01</div>
-                            <h1 class="step-h1">Собираем первичные данные</h1>
+                            <span class="step-h1">Собираем первичные данные</span>
                             <span class="step-desc">Обсуждаем профиль, необходимые компетенции и тд.</span>
                         </div>
                         <div class="find-spec-step">
                             <div class="number-bg">02</div>
-                            <h1 class="step-h1">Поиск подходящих специалистов</h1>
+                            <span class="step-h1">Поиск подходящих специалистов</span>
                             <span class="step-desc">По заданным вами критериям мы проведем поиск и первые этапы
                                 отбора.</span>
                         </div>
                         <div class="find-spec-step">
                             <div class="number-bg">03</div>
-                            <h1 class="step-h1">Оценка и отбор кандидатов</h1>
+                            <span class="step-h1">Оценка и отбор кандидатов</span>
                             <span class="step-desc">Проводим интервью по компетенциям, анализируем личность
                                 кандидатов по системе Thomas International</span>
                         </div>
 
                         <div class="find-spec-step">
                             <div class="number-bg">04</div>
-                            <h1 class="step-h1">Выход сотрудника на работу</h1>
+                            <span class="step-h1">Выход сотрудника на работу</span>
                             <span class="step-desc">Еще один текст с комментариями по данному действию: помогает ли
                                 агентство в адаптации и тд.</span>
                         </div>
                         <div class="find-spec-step">
                             <div class="number-bg">05</div>
-                            <h1 class="step-h1">Оплата работы агентства</h1>
+                            <span class="step-h1">Оплата работы агентства</span>
                             <span class="step-desc">После успешного устройства кандидата на работу вы производите
                                 оплату</span>
                         </div>
                         <div class="find-spec-step purple-step">
-                            <h1 class="step-h1-white">7-14 дней</h1>
+                            <span class="step-h1-white">7-14 дней</span>
                             <span class="step-desc-white">требуется, чтобы найти подходящего кандидата</span>
                         </div>
 
@@ -231,7 +231,7 @@
                 <div class="container-small">
                     <div class="spec-find-form-wrap forms-bg-violet">
                         <div class="spec-find-text">
-                            <h1 class="spec-find-h1">Найдите специалиста за две недели</h1>
+                            <span class="spec-find-h1">Найдите специалиста за две недели</span>
                             <span class="spec-find-desc">
                                 Оставьте контакты, мы свяжемся с вами в течение 15 минут и обсудим все детали.
                             </span>
@@ -255,7 +255,7 @@
                 <div class="container-small">
                     <div class="industries-wrap">
                         <div class="industries-title-col">
-                            <h1 class="h1-title">Подбираем персонал по отраслям</h1>
+                            <span class="h1-title">Подбираем персонал по отраслям</span>
                         </div>
                         <div class="industries-blocks-col">
                             <div class="industries-block">
@@ -297,7 +297,7 @@
             </section>
             <section class="find-vacancies">
                 <div class="container-small">
-                    <h1 class="h1-title">Найдите работу, о которой мечтали</h1>
+                    <span class="h1-title">Найдите работу, о которой мечтали</span>
                     <div class="find-vacancies-wrap forms-bg-violet">
                         <div class="find-vacancies-right-block">
                             <span class="find-vacancies-desc">
