fixes home page css

--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                         </div>
                         <div class="find-spec-form-wrap">
                             <form class="find-spec-form" action="">
-                                <input class="find-spec-field form-field-white" type="text" id="full-name"
-                                    name="full-name" value="Как вас зовут?">
-                                <input class="find-spec-field form-field-white" type="text" id="telephone"
-                                    name="telephone" value="Номер телефона">
+                                <input class="find-spec-field form-field-white form-text-field" type="text"
+                                    id="full-name" name="full-name" placeholder="Как вас зовут?">
+                                <input class="find-spec-field form-field-white form-text-field" type="text"
+                                    id="telephone" name="telephone" placeholder="Номер телефона">
                                 <input class="find-spec-btn white-btn" type="submit" value="Найти специалиста">
                             </form>
                             <div class="bottom-desc-small">
@@ -305,10 +305,10 @@
                             </span>
                             <div class="find-vacancies-form-wrapper">
                                 <form class="find-vacancy-form" action="">
-                                    <input class="find-vacancy-field form-field-white" type="text" id="full-name"
-                                        name="full-name" value="Как вас зовут?">
-                                    <input class="find-vacancy-field form-field-white" type="text" id="telephone"
-                                        name="telephone" value="Номер телефона">
+                                    <input class="find-vacancy-field form-field-white form-text-field" type="text"
+                                        id="full-name" name="full-name" placeholder="Как вас зовут?">
+                                    <input class="find-vacancy-field form-field-white form-text-field" type="text"
+                                        id="telephone" name="telephone" placeholder="Номер телефона">
                                     <input class="find-vacancy-btn white-btn" type="submit" value="Найти специалиста">
                                 </form>
                             </div>
