--- a/services.html
+++ b/services.html
@@ -384,6 +384,25 @@
                                     </span>
                                 </div>
                             </section>
+                            <section class="faq">
+                                <div class="faq-block">
+                                    <span class="h1-title">Часто задаваемые вопросы</span>
+                                    <div class="faq-item">
+                                        <span class="faq-item-title">Какие преимущества при поиске
+                                            топ-менеджмента?</span>
+                                        <span class="icon-arrow-right faq-arrow"></span>
+                                    </div>
+                                    <div class="faq-item">
+                                        <span class="faq-item-title">Какие преимущества при поиске
+                                            топ-менеджмента?</span>
+                                        <span class="icon-arrow-right faq-arrow"></span>
+                                    </div>
+                                    <div class="faq-item">
+                                        <span class="faq-item-title">Какие преимущества при поиске?</span>
+                                        <span class="icon-arrow-right faq-arrow"></span>
+                                    </div>
+                                </div>
+                            </section>
                         </div>
 
                         <div class="sidebar-part">dsfsdfd dsf</div>
