--- a/services.html
+++ b/services.html
@@ -420,20 +420,49 @@
                                 <section class="faq">
                                     <div class="faq-block">
                                         <span class="h1-title">Часто задаваемые вопросы</span>
-                                        <div class="faq-item">
+                                        <button class="faq-item accordion">
                                             <span class="faq-item-title">Какие преимущества при поиске
                                                 топ-менеджмента?</span>
                                             <span class="icon-arrow-right faq-arrow"></span>
+                                        </button>
+                                        <div class="panel">
+                                            <p>При поиске топ-менеджмента через агентство Antal Russia вы минимизируете
+                                                свои риски и серьезно экономите время — при подборе мы используем
+                                                комплексный подход, сравнивая соискателей сразу по нескольким
+                                                параметрам, что может быть неочевидно hr-менеджеру компании, но хорошо
+                                                понятно консультантам, которые имеют многолетний опыт в сфере
+                                                деятельности кандидата.</p>
                                         </div>
-                                        <div class="faq-item">
+                                        <button class="faq-item accordion">
                                             <span class="faq-item-title">Какие преимущества при поиске
                                                 топ-менеджмента?</span>
                                             <span class="icon-arrow-right faq-arrow"></span>
-                                        </div>
-                                        <div class="faq-item">
-                                            <span class="faq-item-title">Какие преимущества при поиске?</span>
-                                            <span class="icon-arrow-right faq-arrow"></span>
-                                        </div>
+                                            </button>
+                                            <div class="panel">
+                                                <p>При поиске топ-менеджмента через агентство Antal Russia вы
+                                                    минимизируете
+                                                    свои риски и серьезно экономите время — при подборе мы используем
+                                                    комплексный подход, сравнивая соискателей сразу по нескольким
+                                                    параметрам, что может быть неочевидно hr-менеджеру компании, но
+                                                    хорошо
+                                                    понятно консультантам, которые имеют многолетний опыт в сфере
+                                                    деятельности кандидата.</p>
+                                            </div>
+                                            <button class="faq-item accordion">
+                                                <span class="faq-item-title">Какие преимущества при поиске
+                                                    топ-менеджмента?</span>
+                                                <span class="icon-arrow-right faq-arrow"></span>
+                                            </button>
+                                            <div class="panel">
+                                                <p>При поиске топ-менеджмента через агентство Antal Russia вы
+                                                    минимизируете
+                                                    свои риски и серьезно экономите время — при подборе мы используем
+                                                    комплексный подход, сравнивая соискателей сразу по нескольким
+                                                    параметрам, что может быть неочевидно hr-менеджеру компании, но
+                                                    хорошо
+                                                    понятно консультантам, которые имеют многолетний опыт в сфере
+                                                    деятельности кандидата.</p>
+                                            </div>
                                     </div>
                                 </section>
 
